Fixed a bug in code

--- a/client-side-rap-stuff/index.html
+++ b/client-side-rap-stuff/index.html
@@ -13,6 +13,6 @@
         <h2> Result: </h2>
         <input></input>
         <button>Click Me</button>
-        <script src="js/main.js" async defer></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
